# comp_analysis

./: .replit  README.md  api.py  app.py  index.html  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  vite.config.js
attached_assets/: Pasted--Best-Buy-App-Reviews-Raw-Scraper-Jupyter-Notebook-This-scraper-collects-ALL-reviews-from-the-B-1747889257756.txt  Pasted-import-requests-from-bs4-import-BeautifulSoup-import-pandas-as-pd-import-time-import-random-import-j-1747889201495.txt  Pasted-import-time-import-json-import-random-import-logging-import-pandas-as-pd-from-datetime-import-dateti-1747939278279.txt  table.tsx
src/: App.tsx  index.css
src/components/: Layout.tsx  Navbar.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Sheet.tsx  SidebarProvider.tsx  Table.tsx
src/lib/: utils.ts
src/pages/: Analysis.tsx  ComponentShowcase.tsx  Dashboard.tsx  DashboardNew.tsx  DataSourcing.tsx  KnowledgeBase.tsx  Reviews.tsx  ScrapeData.tsx  Settings.tsx
utils/: __init__.py  anthropic_helper.py  data_processor.py  ecommerce_scraper.py  google_play_scraper.py  openai_helper.py  trustpilot_scraper.py
