[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "google-play-scraper>=1.2.7",
    "matplotlib>=3.10.3",
    "openai>=1.79.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "wordcloud>=1.9.4",
    "xlsxwriter>=3.2.3",
]
